// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add command should create an address and reply success message 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
Thanks, you're all set. Enjoy ! 🚀
      ",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`add command should reply invalid message is address already exist 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "This address is already registered, please choose another one",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`add command should reply invalid message when coin is not supported 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
This coin is not supported on the pool.
Supported coins on this pool: .",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`add command should reply invalid message when invalid coin 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Invalid coin (supported coins: eth etc xmr ltc dash)",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`add command should reply invalid message when invalid pool 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Invalid pool (supported pools: ethermine nanopool coinfoundry)",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`add command should reply invalid message when no arguments 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
⚠️ *Invalid arguments*
-----------------
/add <coin name> <pool name> <address>
-----------------
Valid coins: eth etc xmr ltc dash
Valid pools: ethermine nanopool coinfoundry
_Example: \\"/add eth ethermine 0x00000000...\\"_
    ",
      Object {
        "parse_mode": "Markdown",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`add command should reply invalid message when no enough arguments 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
⚠️ *Invalid arguments*
-----------------
/add <coin name> <pool name> <address>
-----------------
Valid coins: eth etc xmr ltc dash
Valid pools: ethermine nanopool coinfoundry
_Example: \\"/add eth ethermine 0x00000000...\\"_
    ",
      Object {
        "parse_mode": "Markdown",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
